# algorithm-game

./: .gitignore  AGENTS.md  DESIGN.md  README.md  SPEC.md  TASKS.md  docker-compose.yml
back/: Cargo.toml  Dockerfile  progress.db
back/runtime/: game.h  gamelib.c
back/src/: main.rs  progress.rs  sandbox.rs  stages.rs  trace.rs
data/: stages.json
front/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
front/scripts/: gen-stages.ts  io-problems.ts
front/src/: App.test.tsx  App.tsx  styles.css
front/src/components/: AchievementGallery.tsx  AchievementToast.tsx  ArrayBoard.tsx  BlockEditor.tsx  Board.tsx  CodeEditor.tsx  DailyChallengeCard.tsx  IoResultPanel.tsx  PlayScreen.tsx  ProblemPanel.tsx  SkinPicker.tsx  SolutionModal.tsx  StageSelect.tsx  TitleScreen.tsx
front/src/game/: achievements.ts  api.ts  dailyChallenge.ts  gems.ts  interpreter.test.ts  interpreter.ts  records.ts  simulator.ts  skins.ts  sound.ts  stages.data.json  stages.test.ts  stages.ts  types.ts
